--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/index.html" class="nav-link">
+          <a href="index.html" class="nav-link">
             <!-- <svg
               aria-hidden="true"
               focusable="false"
@@ -179,7 +179,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="/login.html" class="nav-link">
+          <a href="login.html" class="nav-link">
             <!-- <svg
               aria-hidden="true"
               focusable="false"
@@ -224,7 +224,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="/faculty.html" class="nav-link">
+          <a href="faculty.html" class="nav-link">
             <!-- <svg
               aria-hidden="true"
               focusable="false"
